Fix banner icon and text alignment
UDS-1947

--- a/@utahdts/utah-design-system/css/6-components/base-components/popups/_banner.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/popups/_banner.scss
@@ -126,6 +126,10 @@
       }
     }
 
+    &__content-wrapper {
+      display: flex;
+    }
+
     &__message {
       display: flex;
       align-items: center;
